<resources>
    <string name="app_name">NSBM Green App</string>
    <string name="menu_button">menu</string>
    <string name="edit_button_reader">edit</string>
    <string name="back_button_reader">back</string>
    <string name="example_image_reader">example image</string>
    <string name="long_text">The muhurath ceremony of the latest teledrama creation of renowned award winning director jayantha chandrasiri nannaththara teledrama produced by nsbm… Read more</string>
    <string name="events">EVENTS</string>
    <string name="club_amp_societies"><![CDATA[CLUBS & SOCIETIES]]></string>
    <string name="news">NEWS</string>
    <string name="map">MAP</string>
    <string name="covid_information_center">COVID INFORMATION CENTER</string>
    <string name="nsbm_logo">NSBM logo</string>
    <string name="nsbm_foss">NSBM FOSS</string>
    <string name="nsbm_ieee">NSBM IEEE</string>
    <string name="nsbm_innovators_club">NSBM INNOVATORS\' CLUB</string>
    <string name="nsbm_media_club">NSBM MEDIA CLUB</string>
    <string name="nsbm_community_service_club">NSBM COMMUNITY SERVICE CLUB</string>
    <string name="general_knowledge_amp_trivia_club"><![CDATA[GENERAL KNOWLEDGE & TRIVIA CLUB]]></string>
    <string name="nsbm_music_club">NSBM MUSIC CLUB</string>
    <string name="nsbm_drama_club">NSBM DRAMA CLUB</string>
    <string name="nsbm_dancing_club">NSBM DANCING CLUB</string>
    <string name="nsbm_literature_club">NSBM LITERATURE CLUB</string>
    <string name="nsbm_graphics_amp_painting_club"><![CDATA[NSBM GRAPHICS & PAINTING CLUB]]></string>
    <string name="nsbm_explorers_club">NSBM EXPLORERS CLUB</string>
    <string name="nsbm_green_task_force">NSBM GREEN TASK FORCE</string>
    <string name="nsbm_nature_amp_wild_life_club"><![CDATA[NSBM NATURE & WILD LIFE CLUB]]></string>
    <string name="nsbm_oratory_amp_debating_club"><![CDATA[NSBM ORATORY & DEBATING CLUB]]></string>
    <string name="nsbm_aerobics_club">NSBM AEROBICS CLUB</string>
    <string name="nsbm_health_amp_wellness_club"><![CDATA[NSBM HEALTH & WELLNESS CLUB]]></string>
    <string name="basketball_club">BASKETBALL CLUB</string>
    <string name="basketball_club_logo">basketball club logo</string>
    <string name="register_form">Register Form</string>
    <string name="email">Email</string>
    <string name="student_id">Student ID</string>
    <string name="batch">Batch</string>
    <string name="degree">Degree</string>
    <string name="submit">SUBMIT</string>
    <string name="full_name">Full Name</string>
    <string name="activity_based_clubs">ACTIVITY BASED CLUBS</string>
    <string name="international_clubs">INTERNATIONAL CLUBS</string>
    <string name="academic_clubs">ACADEMIC CLUBS</string>
    <string name="religious_clubs">RELIGIOUS CLUBS</string>
    <string name="sports_clubs">SPORTS CLUBS</string>
    <string name="leo_club">LEO CLUB</string>
    <string name="aisec_club">AISEC CLUB</string>
    <string name="toastmaster_club">TOASTMASTER CLUB</string>
    <string name="un_student_forum">UN STUDENT FORUM</string>
    <string name="gavel_club">GAVEL CLUB</string>
    <string name="rotaract_club">ROTARACT CLUB</string>
    <string name="nsbm_buddhist_society">NSBM BUDDHIST SOCIETY</string>
    <string name="nsbm_catholic_amp_christian_society"><![CDATA[NSBM CATHOLIC & CHRISTIAN SOCIETY]]></string>
    <string name="nsbm_hindu_society">NSBM HINDU SOCIETY</string>
    <string name="nsbm_islamic_society">NSBM ISLAMIC SOCIETY</string>
    <string name="nsbm_athletic_club">NSBM ATHLETIC CLUB</string>
    <string name="nsbm_swimming_club">NSBM SWIMMING CLUB</string>
    <string name="nsbm_soccer_club">NSBM SOCCER CLUB</string>
    <string name="nsbm_fitness_club">NSBM FITNESS CLUB</string>
    <string name="nsbm_basketball_club">NSBM BASKETBALL CLUB</string>
    <string name="nsbm_archery_club">NSBM ARCHERY CLUB</string>
    <string name="nsbm_badminton_club">NSBM BADMINTON CLUB</string>
    <string name="nsbm_rugby_club">NSBM RUGBY CLUB</string>
    <string name="nsbm_cricket_club">NSBM CRICKET CLUB</string>
    <string name="nsbm_table_tennis_club">NSBM TABLE TENNIS CLUB</string>
    <string name="nsbm_netball_club">NSBM NETBALL CLUB</string>
    <string name="nsbm_martial_arts_club">NSBM MARTIAL ARTS CLUB</string>
    <string name="nsbm_hockey_club">NSBM HOCKEY CLUB</string>
    <string name="nsbm_chess_club">NSBM CHESS CLUB</string>
    <string name="nsbm_volleyball_club">NSBM VOLLEYBALL CLUB</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_event">Add Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account">Don\'t have an account? <b>Register</b></string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="password">Password</string>
    <string name="club_name">Club Name</string>
    <string name="meeting_title">Meeting Title</string>
    <string name="meeting_description">Meeting Description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="add_event_ui">Add Event UI</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="_00_00">00:00</string>
    <string name="add">Add</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="addpostui">AddPostUI</string>
    <string name="banner">banner</string>
    <string name="logo">logo</string>
    <string name="cs_name">CS Name</string>
    <string name="description">Description</string>
    <string name="follow">Follow</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="sync_now">Sync Now</string>
    <string name="web_sync_completed">Web Sync Completed!</string>
    <string name="enter">Enter</string>
    <string name="add_event_button">add event button</string>
    <string name="add_post_button">add post button</string>
    <string name="add_meeting_button">add meeting button</string>
    <string name="you_are_logged_in_as">You are logged in as</string>
    <string name="logout">Logout</string>
    <string name="register_as_a_new_user">Register as a new user</string>
    <string name="name">Name</string>
    <string name="nsbmlogo">nsbm logo</string>
    <string name="club_image">club image</string>
    <string name="button">Button</string>
    <string name="news_image">news image</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="notifications">Notifications</string>
    <string name="invitations">Invitations</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="item_3">Item 3</string>
    <string name="day">Day</string>
    <string name="event_name">Event name</string>
    <string name="required">Required</string>
    <string name="please_wait_if_the_app_appears_to_be_stuck_when_you_sync_for_the_first_time_today">Please wait if the app appears to be stuck when you sync for the first time today</string>
</resources>