<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:src="@drawable/pic1"
                android:contentDescription="@string/example_image_reader" />

            <Button
                android:id="@+id/racBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/rotaract_club"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/leoBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/leo_club"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/aisecBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/aisec_club"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/toastBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/toastmaster_club"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/unBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/un_student_forum"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/gavelBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/gavel_club"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>