<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/lblRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        style="@style/TextAppearance.MaterialComponents.Headline4"/>

    <TextView
        android:id="@+id/lblRegisterCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register_as_a_new_user"
        android:layout_below="@id/lblRegisterTitle"
        style="@style/TextAppearance.MaterialComponents.Caption"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxName"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_above="@+id/boxStdId"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxStdId"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_above="@+id/boxBatch"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtStdId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_id"
            android:inputType="number"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxBatch"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/txtBatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/batch"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxEmail"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_below="@+id/boxBatch"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxPassword"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/boxEmail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boxPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register" />

</RelativeLayout>