<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/example_image_reader"
                android:src="@drawable/pic1" />

            <Button
                android:id="@+id/buddhistBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/nsbm_buddhist_society"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/catholicBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/nsbm_catholic_amp_christian_society"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/hinduBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/nsbm_hindu_society"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/islamicBtn"
                android:layout_width="287dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/nsbm_islamic_society"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>